--- a/user.css
+++ b/user.css
@@ -7,16 +7,19 @@
   width: 6px !important;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--modspotify_scrollbar);
+  background-color: var(--modspotify_scrollbar) !important;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #4D21FC;
+  background-color: #4D21FC !important;
 }
 ::-webkit-scrollbar-thumb:active {
-  background-color: #FAD000;
+  background-color: #FAD000 !important;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
+}
+::-webkit-scrollbar-button {
+  height: 0 !important;
 }
 .Header__background-color,
 .glue-page-header__background-color {
